# lot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
experiments/: copy_reverse.yaml
lot/cli/: eval.py  export.py  train.py
lot/engine/: eval.py  train.py
lot/model/: components.py  lattice.py  transformer.py  vanilla.py
lot/tasks/: copy_reverse.py
tests/: test_lattice.py
